# wsl-sdl2-opengl-template

./: CMakeLists.txt  Dockerfile  README.md  main.c
.devcontainer/: devcontainer.json
